# opt-mimic-robot-deploy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/robot_script/: common.hpp  controller.hpp  imu_controller.hpp  main.hpp  network_controller.hpp  phase_controller.hpp  solo8.hpp
src/: calibrate.cpp  imu_controller.cpp  main.cpp  network_controller.cpp  phase_controller.cpp  solo8.cpp  test_torch.cpp
srcpy/: convert_torchscript_model.py
